Corrects z-index of code, so selection is visible.

--- a/jekyll-site-src/_css_src/components/_code.scss
+++ b/jekyll-site-src/_css_src/components/_code.scss
@@ -20,9 +20,9 @@ $code-lineheight: 20px;
   margin: 24px 0;
   background: $code-background-color;
   border: none;
+
   pre {
     @extend %code-text-style;
-    z-index: 0;
   }
 }
 
